--- a/index.html
+++ b/index.html
@@ -72,21 +72,65 @@ http://www.templatemo.com/tm-475-holiday
 		    <h1>Web Design & <br><span>Development</span><br>Course</h1>
 		    <p class="par"> Book with us and enjoy</p>
 			<button class="cn"><a href="#">CHECK HOTELS</a></button>
-			<div class="form">
-			    <h2>Login Here</h2>
-			    <input type="email" name="email" placeholder="Enter Email Here">
-			    <input type="password" name="" placeholder="Enter Password Here">
-			    <button class="btnn"><a href="#">Login</a></button>
-			    <p class="link">Don't have an account<br>
-			    <a href="#">Sign up </a> here</a></p>
-			    <p class="liw">Log in with</p>
-			    <div class="icons">
-				<a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-				<a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-				<a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-				<a href="#"><ion-icon name="logo-google"></ion-icon></a>
-				<a href="#"><ion-icon name="logo-skype"></ion-icon></a>
-			    </div>
+			<div class="col-lg-4 col-md-4 col-sm-6">
+				<!-- Nav tabs -->
+				<div class="tm-home-box-1">
+					<ul class="nav nav-tabs tm-white-bg" role="tablist" id="hotelCarTabs">
+					    <li role="presentation" class="active">
+					    	<a href="#hotel" aria-controls="hotel" role="tab" data-toggle="tab">Hotel</a>
+					    </li>
+					</ul>
+
+					<!-- Tab panes -->
+					<div class="tab-content">
+					    <div role="tabpanel" class="tab-pane fade in active tm-white-bg" id="hotel">
+					    	<div class="tm-search-box effect2">
+								<form action="#" method="post" class="hotel-search-form">
+									<div class="tm-form-inner">
+										<div class="form-group">
+							            	 <select class="form-control">
+							            	 	<option value="">-- Select Hotel -- </option>
+							            	 	<option value="hotel 1">Hotel 1</option>
+												<option value="hotel 2">Hotel 2</option>
+												<option value="hotel 3">Hotel 3</option>
+												<option value="hotel 4">Hotel 4</option>
+											</select> 
+							          	</div>
+							          	<div class="form-group">
+							                <div class='input-group date' id='datetimepicker1'>
+							                    <input type='text' class="form-control" placeholder="Check-in Date" />
+							                    <span class="input-group-addon">
+							                        <span class="fa fa-calendar"></span>
+							                    </span>
+							                </div>
+							            </div>
+							          	<div class="form-group">
+							                <div class='input-group date' id='datetimepicker2'>
+							                    <input type='text' class="form-control" placeholder="Check-out Date" />
+							                    <span class="input-group-addon">
+							                        <span class="fa fa-calendar"></span>
+							                    </span>
+							                </div>
+							            </div>								
+								    <div class="form-group margin-bottom-0">
+							                <select class="form-control">
+							            	 	<option value="">-- Number of Rooms -- </option>
+							            	 	<option value="1">1</option>
+												<option value="2">2</option>
+												<option value="3">3</option>
+												<option value="4">4</option>
+												<option value="5p">5+</option>
+											</select> 
+							            </div>
+									</div>							
+						            <div class="form-group tm-yellow-gradient-bg text-center">
+						            	<button type="submit" name="submit" class="tm-yellow-btn">Check Now</button>
+						            </div>  
+								</form>
+							</div>
+					    </div>				    
+					</div>
+				</div>								
 			</div>
                 </div>
 	</section>
