--- a/index.html
+++ b/index.html
@@ -67,11 +67,8 @@ http://www.templatemo.com/tm-475-holiday
 	</section>
 
 	<!-- gray bg -->	
-	<section class = "main">
-		<div class="content">
-		    <h1>Web Design & <br><span>Development</span><br>Course</h1>
-		    <p class="par"> Book with us and enjoy</p>
-			<button class="cn"><a href="#">CHECK HOTELS</a></button>
+	<section class="container tm-home-section-1" id="more">
+		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<!-- Nav tabs -->
 				<div class="tm-home-box-1">
@@ -132,8 +129,92 @@ http://www.templatemo.com/tm-475-holiday
 					</div>
 				</div>								
 			</div>
-                </div>
-	</section>
+
+			<div class="col-lg-4 col-md-4 col-sm-6">
+				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center">
+					<img src="img/mu002.jpg" alt="image" class="img-responsive">
+					<a href="#">
+						<div class="tm-green-gradient-bg tm-city-price-container">
+							<span>The Leela, Mumbai</span>
+							<span>Rs 8,600 Per Night </span>
+						</div>	
+					</a>			
+				</div>				
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6">
+				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-right">
+					<img src="img/no003.jpg" alt="image" class="img-responsive">
+					<a href="#">
+						<div class="tm-red-gradient-bg tm-city-price-container">
+							<span>Hous Of Comfort</span>
+							<span>Rs 6,900 Per Night</span>
+						</div>	
+					</a>					
+				</div>				
+			</div>
+		</div>
+	
+		<div class="section-margin-top">
+			<div class="row">				
+				<div class="tm-section-header">
+					<div class="col-lg-3 col-md-3 col-sm-3"><hr></div>
+					<div class="col-lg-6 col-md-6 col-sm-6"><h2 class="tm-section-title">Popular Hotels</h2></div>
+					<div class="col-lg-3 col-md-3 col-sm-3"><hr></div>	
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2">						
+						<img src="img/index-03.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 1, in Chennaid</h3>
+						<p class="tm-date">01 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2">						
+					    <img src="img/index-04.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 2, in Jaipur</h3>
+						<p class="tm-date">02 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2">						
+					    <img src="img/index-05.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 3, in Noida</h3>
+						<p class="tm-date">02 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2 tm-home-box-2-right">						
+					    <img src="img/index-06.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 4, in Tiruchirappalli</h3>
+						<p class="tm-date">01 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>			
+		</div>
+	</section>		
+	
 	<!-- white bg -->
 	<section class="tm-white-bg section-padding-bottom">
 		<div class="container">
