--- a/index.html
+++ b/index.html
@@ -131,26 +131,8 @@ http://www.templatemo.com/tm-475-holiday
 			</div>
 
 			<div class="col-lg-4 col-md-4 col-sm-6">
-				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center">
-					<img src="img/mu002.jpg" alt="image" class="img-responsive">
-					<a href="#">
-						<div class="tm-green-gradient-bg tm-city-price-container">
-							<span>The Leela, Mumbai</span>
-							<span>Rs 8,600 Per Night </span>
-						</div>	
-					</a>			
-				</div>				
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-6">
-				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-right">
-					<img src="img/no003.jpg" alt="image" class="img-responsive">
-					<a href="#">
-						<div class="tm-red-gradient-bg tm-city-price-container">
-							<span>Hous Of Comfort</span>
-							<span>Rs 6,900 Per Night</span>
-						</div>	
-					</a>					
-				</div>				
+				<h1 class="tm-banner-title">Only  <span class="tm-yellow-text">7+ days </span> Stays</h1>
+				<p class="tm-banner-subtitle">We offer service for booking of 7 days minimum. <br> Save 30% reduction on the regular hotel price.</p>
 			</div>
 		</div>
 	
